fix: overflowsidebar deploying fix

--- a/src/app/shared/components/modal/modal.scss
+++ b/src/app/shared/components/modal/modal.scss
@@ -2,7 +2,7 @@
 @use "../../../../assets/styles/variables" as *;
 
 .modal-background {
-  z-index: 10;
+  z-index: 999;
   position: fixed;
   width: 100%;
   height: 100%;
